--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,10 +9,11 @@
   <h2>Загрузите CSV-файл</h2>
   <input type="file" id="fileInput" />
   <button onclick="upload()">Загрузить</button>
+  <select id="brandSelect"></select>
 
   <div id="result" style="margin-top: 20px;"></div>
   <div id="chart" style="width: 100%; height: 500px; margin-top: 40px;"></div>
-
+  
   <script>
     async function upload() {
       const fileInput = document.getElementById("fileInput");
@@ -74,6 +75,17 @@
           ]
       });
     }
+    //Селектор
+    const brands = ['Brand A', 'Brand B', 'Brand C'];
+    const select = document.getElementById("brandSelect");
+    
+    brands.forEach(brand =>{
+      const option = document.getElement("option");
+      option.value = brand;
+      option.text = brand;
+      select.appendChild(option);
+    });
+
   </script>
-</body>
+  </body>
 </html>
