--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -74,18 +74,19 @@
             }
           ]
       });
-    }
-    
-    //Селектор
-    const brands = ['Brand A', 'Brand B', 'Brand C'];
-    const select = document.getElementById("brandSelect");
-    
-    brands.forEach(brand =>{
-      const option = document.createElement("option");
-      option.value = brand;
-      option.text = brand;
-      select.appendChild(option);
-    });
+      //Селектор
+      const brands = data.filters["Brand"];
+      const select = document.getElementById("brandSelect");
+
+      select.innerHTML ="";
+      
+      brands.forEach(brand =>{
+        const option = document.createElement("option");
+        option.value = brand;
+        option.text = brand;
+        select.appendChild(option);
+      });
+      }    
   </script>
   </body>
 </html>
