--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -75,6 +75,8 @@
       console.log("Selected brand:", selectedBrand);
       console.log("Filtered rows:", fltrd_Brand);
       console.log("Filtered values:", filteredData_filtered);
+      console.log("Пример строки:", data.filtered_factors[0]);
+
 
       chart.setOption({
         title: { text: "Сравнение с категорией" },
