--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,100 +10,8 @@
   <input type="file" id="fileInput" />
   <button onclick="upload()">Загрузить</button>
   <select id="brandSelect"></select>
-
   <div id="result" style="margin-top: 20px;"></div>
-  <div id="chart" style="width: 100%; height: 500px; margin-top: 40px;"></div>
-  
-  <script>
-    async function upload() {
-      const fileInput = document.getElementById("fileInput");
-      const file = fileInput.files[0];
-      if (!file) return alert("Сначала выберите файл");
-
-      const formData = new FormData();
-      formData.append("file", file);
-
-      const response = await fetch("/upload_csv", {
-        method: "POST",
-        body: formData
-      });
-
-      const data = await response.json();
-
-      if (!response.ok || !data.filtered_factors) {
-        document.getElementById("result").innerText =
-          "Ошибка: " + (data.error || "Нет данных от сервера");
-        return;
-      }
-
-      // Показываем данные в виде списка
-      const html = data["filtered_factors"].map(row => `
-        <div>От: <b>${row.from}</b> → <b>${row.to}</b>, коэффициент: <b>${row.scaling_factor}</b></div>
-      `).join("");
-      document.getElementById("result").innerHTML = html;
-
-      // Селектор брендов
-      const brands = data.filters["Brand"];
-      const select = document.getElementById("brandSelect");
-      select.innerHTML = "";
-
-      brands.forEach(brand => {
-        const option = document.createElement("option");
-        option.value = brand;
-        option.text = brand;
-        select.appendChild(option);
-      });
-
-      // Обработчик на смену бренда
-      select.addEventListener("change", () => {
-        const selectedBrand = select.value;
-        drawChart(data, selectedBrand);
-      });
-
-      // Построение графика по первому бренду
-      drawChart(data, brands[0]);
-    }
-
-    function drawChart(data, selectedBrand) {
-      const chart = echarts.init(document.getElementById("chart"));
-
-      const fltrd_Brand = data.filtered_factors.filter(r => r.Brand === selectedBrand);
-      const labels = fltrd_Brand.map(r => `${r.from} → ${r.to}`);
-      const filteredData_filtered = fltrd_Brand.map(r => r.scaling_factor);
-      const baselineData = data.baseline_factors.map(r => r.scaling_factor);
-
-      console.log("Selected brand:", selectedBrand);
-      console.log("Filtered rows:", fltrd_Brand);
-      console.log("Filtered values:", filteredData_filtered);
-      console.log("Пример строки:", data.filtered_factors[0]);
-
-
-      chart.setOption({
-        title: { text: "Сравнение с категорией" },
-        tooltip: { trigger: 'axis' },
-        legend: { data: ['Filtered', 'Baseline'] },
-        xAxis: {
-          type: 'category',
-          data: labels,
-          axisLabel: { rotate: 45 }
-        },
-        yAxis: { type: 'value' },
-        series: [
-          {
-            name: 'Filtered',
-            type: 'bar',
-            data: filteredData_filtered,
-            barGap: 0
-          },
-          {
-            name: 'Baseline',
-            type: 'bar',
-            data: baselineData
-          }
-        ]
-      });
-    }
-</script>
-
+  <div id="chart" style="width: 100%; height: 500px; margin-top: 40px;"></div>  
+  <script scr="main.js"></script>
   </body>
 </html>
